force-app/main/default/objects/BusinessOppJunction__c/BusinessOppJunction__c.object-meta.xml
<CustomObject>
    <label>BusinessOppJunction</label>
    <nameField>
        <label>BusinessOppJunction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BusinessOppJunctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>