force-app/main/default/objects/BusinessOppJunction__c/fields/temp__c.field-meta.xml
<CustomField>
    <fullName>temp__c</fullName>
    <label>temp</label>
    <type>Address</type>
</CustomField>